--- a/Aumento_Temp_Arg.html
+++ b/Aumento_Temp_Arg.html
@@ -225,11 +225,11 @@
 
     .modal-content {
       background-color: #2a2a3f;
-      margin: auto;
+      margin: 8px; /* Agregar márgenes de 8px */
       padding: 20px;
       border-radius: 12px;
       width: 90%;
-      max-width: 800px;
+      max-width: 320px; /* Cambiar el ancho máximo a 320px */
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       position: relative;
       color: #ffffff;
