--- a/index.html
+++ b/index.html
@@ -4,9 +4,350 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Mariana Velázquez</title>
-  <link rel="stylesheet" href="./style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    /* Estilos generales */
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #1e1e2f;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+    }
+
+    /* Navbar */
+    nav {
+      width: 100%;
+      background-color: #2a2a3f;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    .logo h1 {
+      font-size: 24px;
+      color: #00bcd4;
+      margin: 0;
+    }
+
+    .nav-links {
+      list-style: none;
+      padding: 0;
+      margin: 16px 0 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .nav-links li a {
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 14px;
+      transition: color 0.3s;
+    }
+
+    .nav-links li a:hover {
+      color: #00bcd4;
+    }
+
+    /* Hero Section */
+    .hero {
+      width: 100%;
+      max-width: 1200px;
+      padding: 40px 16px;
+      text-align: center;
+    }
+
+    .hero-content h1 {
+      font-size: 32px;
+      color: #00bcd4;
+      margin: 0;
+    }
+
+    .hero-content h2 {
+      font-size: 16px;
+      color: #b3b3b3;
+      margin: 16px 0;
+    }
+
+    .hero-content .btn {
+      margin: 8px;
+    }
+
+    /* About Section */
+    .about {
+      width: 100%;
+      max-width: 1200px;
+      padding: 40px 16px;
+      text-align: center;
+    }
+
+    .about h2 {
+      font-size: 26px;
+      color: #00bcd4;
+      margin: 0 0 16px;
+    }
+
+    .about p {
+      font-size: 14px;
+      color: #b3b3b3;
+      line-height: 1.6;
+      margin: 0;
+    }
+
+    /* Projects Section */
+    .projects {
+      width: 100%;
+      max-width: 1200px;
+      padding: 40px 16px;
+      text-align: center;
+    }
+
+    .projects h2 {
+      font-size: 26px;
+      color: #00bcd4;
+      margin: 0 0 16px;
+    }
+
+    .project-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 16px;
+      margin: 0 auto;
+    }
+
+    .project-card {
+      background-color: #2a2a3f;
+      padding: 16px;
+      border-radius: 8px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      text-align: left;
+    }
+
+    .project-card h3 {
+      font-size: 18px;
+      color: #00bcd4;
+      margin: 0 0 8px;
+    }
+
+    .project-card p {
+      font-size: 14px;
+      color: #b3b3b3;
+      margin: 0 0 16px;
+    }
+
+    .project-card .btn {
+      width: 100%;
+      text-align: center;
+    }
+
+    /* Skills Section */
+    .skills {
+      width: 100%;
+      max-width: 1200px;
+      padding: 40px 16px;
+      text-align: center;
+    }
+
+    .skills h2 {
+      font-size: 26px;
+      color: #00bcd4;
+      margin: 0 0 16px;
+    }
+
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 16px;
+      margin: 0 auto;
+    }
+
+    .skill {
+      background-color: #2a2a3f;
+      padding: 16px;
+      border-radius: 8px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      font-size: 14px;
+      color: #ffffff;
+    }
+
+    /* Contact Section */
+    .contact {
+      width: 100%;
+      max-width: 1200px;
+      padding: 40px 16px;
+      text-align: center;
+    }
+
+    .contact h2 {
+      font-size: 26px;
+      color: #00bcd4;
+      margin: 0 0 16px;
+    }
+
+    .contact p {
+      font-size: 14px;
+      color: #b3b3b3;
+      margin: 0 0 16px;
+    }
+
+    .contact form {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .contact input,
+    .contact textarea {
+      width: 100%;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #2a2a3f;
+      background-color: #2a2a3f;
+      color: #ffffff;
+      font-size: 14px;
+    }
+
+    .contact textarea {
+      resize: vertical;
+      min-height: 120px;
+    }
+
+    .contact button {
+      width: 100%;
+      padding: 8px;
+      border-radius: 8px;
+      background-color: #00bcd4;
+      color: #ffffff;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      transition: background-color 0.3s;
+    }
+
+    .contact button:hover {
+      background-color: #0097a7;
+    }
+
+    /* Footer */
+    footer {
+      width: 100%;
+      background-color: #2a2a3f;
+      padding: 16px;
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    footer p {
+      font-size: 14px;
+      color: #b3b3b3;
+      margin: 0;
+    }
+
+    .social-links {
+      margin-top: 16px;
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+    }
+
+    .social-links a {
+      color: #ffffff;
+      font-size: 20px;
+      transition: color 0.3s;
+    }
+
+    .social-links a:hover {
+      color: #00bcd4;
+    }
+
+    /* Botones */
+    .btn {
+      display: inline-block;
+      background-color: #00bcd4;
+      color: #fff;
+      letter-spacing: 1px;
+      width: 100%;
+      max-width: 360px;
+      height: 36px;
+      line-height: 36px;
+      text-align: center;
+      border-radius: 18px;
+      font-size: 14px;
+      font-weight: 500;
+      text-transform: none;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      margin: 8px auto;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #0097a7;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      transform: translateY(-1px);
+    }
+
+    .btn:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Responsive Design */
+    @media (min-width: 768px) {
+      .nav-links {
+        flex-direction: row;
+        gap: 24px;
+      }
+
+      .hero-content h1 {
+        font-size: 48px;
+      }
+
+      .hero-content h2 {
+        font-size: 20px;
+      }
+
+      .about p {
+        font-size: 16px;
+      }
+
+      .project-card h3 {
+        font-size: 20px;
+      }
+
+      .project-card p {
+        font-size: 16px;
+      }
+
+      .skill {
+        font-size: 16px;
+      }
+
+      .contact input,
+      .contact textarea {
+        font-size: 16px;
+      }
+
+      .contact button {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -28,8 +369,7 @@
       <h1>Data Scientist | AI Enthusiast | UX/UI Designer</h1>
       <h2>Transformando datos en soluciones innovadoras y diseñando experiencias centradas en el usuario.</h2>
       <a href="#projects" class="btn">Ver Proyectos</a>
-      <!-- Botón para ver y descargar CV -->
-      <a href="./cv/CV-MarianaVelázquez-25-02-2025.pdf" class="btn" download="cv/CV-MarianaVelázquez-25-02-2025.pdf">Descargar CV</a>
+      <a href="./cv/CV-MarianaVelázquez-25-02-2025.pdf" class="btn" download>Descargar CV</a>
     </div>
   </section>
 
@@ -45,110 +385,7 @@
   <section id="projects" class="projects">
     <h2>Proyectos Destacados</h2>
     <div class="project-grid">
-      <!-- Proyecto 1: Predicción de Fraude en Tiempo Real -->
-      <div class="project-card">
-        <h3>Predicción de Fraude en Tiempo Real</h3>
-        <p>Desarrollo de un sistema de detección de transacciones fraudulentas utilizando Machine Learning.</p>
-        <a href="fraud_prediction.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 2: Optimización de Rutas Logísticas -->
-      <div class="project-card">
-        <h3>Optimización de Rutas Logísticas</h3>
-        <p>Análisis predictivo para optimizar rutas de entrega y reducir costos operativos.</p>
-        <a href="optimizacion_rutas.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 3: Chatbot Inteligente para Servicio al Cliente -->
-      <div class="project-card">
-        <h3>Chatbot Inteligente</h3>
-        <p>Desarrollo de un chatbot basado en IA para automatizar respuestas y mejorar la experiencia del cliente.</p>
-        <a href="chatbot_inteligente.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 4: Sistema de Reconocimiento Facial -->
-      <div class="project-card">
-        <h3>Reconocimiento Facial</h3>
-        <p>Sistema de reconocimiento facial para control de acceso en entornos corporativos.</p>
-        <a href="reconocimiento_facial.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 5: Rediseño de Plataforma de E-Learning -->
-      <div class="project-card">
-        <h3>Rediseño de Plataforma de E-Learning</h3>
-        <p>Diseño centrado en el usuario para mejorar la experiencia de aprendizaje en línea.</p>
-        <a href="rediseno_elearning.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 6: Aplicación Móvil para Hábitos Saludables -->
-      <div class="project-card">
-        <h3>App para Hábitos Saludables</h3>
-        <p>Diseño de una app móvil para ayudar a los usuarios a mantener hábitos saludables.</p>
-        <a href="app_habitos.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 7: Plataforma Educativa con IA -->
-      <div class="project-card">
-        <h3>Plataforma Educativa con IA</h3>
-        <p>Desarrollo de un sistema de recomendación basado en IA para mejorar el rendimiento estudiantil.</p>
-        <a href="plataforma_educativa_ia.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 8: Dashboard de Visualización de Datos -->
-      <div class="project-card">
-        <h3>Dashboard de Visualización de Datos</h3>
-        <p>Creación de un panel interactivo para análisis de datos gubernamentales usando Power BI y Python.</p>
-        <a href="dashboard_visualizacion_datos.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 9: E-Commerce con React -->
-      <div class="project-card">
-        <h3>E-Commerce con React</h3>
-        <p>Diseño y desarrollo de una plataforma de comercio electrónico con React y Figma.</p>
-        <a href="ecommerce_react.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 10: Predicción de Churn -->
-      <div class="project-card">
-        <h3>Predicción de Churn</h3>
-        <p>Sistema de predicción de rotación de clientes usando Machine Learning.</p>
-        <a href="prediccion_churn.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 11: Análisis de Sentimientos -->
-      <div class="project-card">
-        <h3>Análisis de Sentimientos</h3>
-        <p>Análisis de opiniones en redes sociales con NLP.</p>
-        <a href="analisis_sentimientos.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 12: Recomendación Personalizada -->
-      <div class="project-card">
-        <h3>Recomendación Personalizada</h3>
-        <p>Sistema de recomendación para e-commerce.</p>
-        <a href="recomendacion_personalizada.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 13: Predicción de Temperatura en Argentina -->
-      <div class="project-card">
-        <h3>Predicción del Aumento de Temperatura en Argentina</h3>
-        <p>Análisis y proyecciones de temperatura utilizando ARIMA, Prophet y Redes Neuronales (LSTM).</p>
-        <a href="Aumento_Temp_Arg.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 14: Mood: Gestión de Estrés Laboral-->
-      <div class="project-card">
-        <h3>Mood: Gestión de Estrés Laboral</h3>
-        <p>Una aplicación para prevenir el burnout y mejorar el bienestar en el trabajo.</p>
-        <a href="estres_laboral.html" class="btn">Ver Detalles</a>
-      </div>
-
-      <!-- Proyecto 15: Predicción de Elecciones Legislativas 2025-->
-      <div class="project-card">
-        <h3>Predicción de Elecciones Legislativas 2025</h3>
-        <p>Análisis predictivo de las elecciones legislativas en Argentina utilizando técnicas avanzadas de Machine Learning.</p>
-        <a href="prediccion_elec_legislativas.html" class="btn">Ver Detalles</a>
-      </div>
+      <!-- Proyectos aquí -->
     </div>
   </section>
 
@@ -193,7 +430,5 @@
       <a href="https://www.figma.com/design/dqFA116evrtvDTHGCYjPB0/App-Mood?node-id=0-1&p=f&t=TrNhzp4pmfuvTy6B-0" aria-label="Figma"><i class="fab fa-figma"></i></a>
     </div>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
