--- a/fraud_prediction.html
+++ b/fraud_prediction.html
@@ -29,17 +29,19 @@
     }
 
     header h1 {
-      font-size: 36px;
+      font-size: 24px; /* Cambiado a 24px para coincidir con el index.html */
       color: #00bcd4;
       margin: 0;
       font-weight: 500;
+      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
     }
 
     header p {
-      font-size: 13px;
+      font-size: 13px; /* Coincide con el index.html */
       color: #b3b3b3;
       margin: 10px 0 0;
       font-weight: 300;
+      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
     }
 
     .project-details {
@@ -50,17 +52,19 @@
     }
 
     .project-details h2 {
-      font-size: 26px;
+      font-size: 22px; /* Cambiado a 22px para coincidir con el index.html */
       color: #00bcd4;
       margin-top: 0;
       font-weight: 500;
+      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
     }
 
     .project-details p {
-      font-size: 13px;
+      font-size: 13px; /* Coincide con el index.html */
       line-height: 1.6;
       color: #b3b3b3;
       margin-bottom: 20px;
+      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
     }
 
     .project-details ul {
@@ -71,11 +75,34 @@
 
     .project-details ul li {
       margin-bottom: 10px;
-      font-size: 13px;
+      font-size: 13px; /* Coincide con el index.html */
       color: #b3b3b3;
+      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
     }
 
-    
+    /* Botones */
+    .btn {
+      display: inline-block;
+      background-color: #00bcd4;
+      color: #fff;
+      letter-spacing: 1px;
+      width: 100%;
+      max-width: 320px; /* Coincide con el index.html */
+      height: 36px;
+      line-height: 36px;
+      text-align: center;
+      border-radius: 18px;
+      font-size: 13px; /* Coincide con el index.html */
+      font-weight: 500;
+      text-transform: none;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      margin: 6px auto;
+      text-decoration: none;
+    }
+
     .btn:hover {
       background-color: #0097a7;
       transform: scale(1.05);
@@ -150,7 +177,7 @@
     }
 
     .metrics p {
-      font-size: 13px;
+      font-size: 13px; /* Coincide con el index.html */
       color: #b3b3b3;
       margin: 5px 0;
     }
@@ -210,7 +237,7 @@
 
     .modal-content {
       background-color: #2a2a3f;
-      margin: auto;
+      margin: 8px; /* Añadido margen de 8px en todos los lados */
       padding: 20px;
       border-radius: 12px;
       width: 90%;
@@ -235,26 +262,23 @@
 
     /* Responsive Design */
     @media (max-width: 768px) {
-
-      h1{
-        font-size: 32px;
+      h1 {
+        font-size: 24px; /* Coincide con el index.html */
       }
 
       header p {
-        font-size: 13px;
+        font-size: 13px; /* Coincide con el index.html */
         margin-top: 10%;
       }
 
       .project-details h2 {
-        font-size: 26px;
+        font-size: 22px; /* Coincide con el index.html */
         margin-top: -3%;
       }
 
       .project-details p {
-        font-size: 13px;
-        
+        font-size: 13px; /* Coincide con el index.html */
       }
-
 
       .hyperspeed-container {
         width: 260px;
