--- a/fraud_prediction.html
+++ b/fraud_prediction.html
@@ -229,15 +229,16 @@
       top: 0;
       width: 100%;
       height: 100%;
-      overflow: auto;
+      overflow: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
       background-color: rgba(0, 0, 0, 0.5);
       justify-content: center;
-      align-items: center;
+      align-items: flex-start; /* Cambiado a flex-start para alinear el modal en la parte superior */
+      padding-top: 8px; /* Añadido margen superior */
     }
 
     .modal-content {
       background-color: #2a2a3f;
-      margin: 8px; /* Añadido margen de 8px en todos los lados */
+      margin: 8px; /* Margen en todos los lados */
       padding: 20px;
       border-radius: 12px;
       width: 90%;
@@ -245,6 +246,8 @@
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       position: relative;
       color: #ffffff;
+      max-height: 90vh; /* Limita la altura del modal al 90% de la altura de la ventana */
+      overflow-y: auto; /* Permite el desplazamiento vertical si el contenido es demasiado grande */
     }
 
     .close {
