--- a/fraud_prediction.html
+++ b/fraud_prediction.html
@@ -232,17 +232,17 @@
       overflow: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
       background-color: rgba(0, 0, 0, 0.5);
       justify-content: center;
-      align-items: flex-start; /* Cambiado a flex-start para alinear el modal en la parte superior */
-      padding-top: 8px; /* Añadido margen superior */
+      align-items: flex-start; /* Alinea el modal en la parte superior */
+      padding-top: 8px; /* Margen superior */
     }
 
     .modal-content {
       background-color: #2a2a3f;
-      margin: 8px; /* Margen en todos los lados */
+      margin: 8px auto; /* Centrado con márgenes iguales a los lados */
       padding: 20px;
       border-radius: 12px;
-      width: 90%;
-      max-width: 800px;
+      width: 90%; /* Ancho del 90% del contenedor padre */
+      max-width: 600px; /* Ancho máximo más angosto */
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       position: relative;
       color: #ffffff;
