--- a/fraud_prediction.html
+++ b/fraud_prediction.html
@@ -29,19 +29,19 @@
     }
 
     header h1 {
-      font-size: 24px; /* Cambiado a 24px para coincidir con el index.html */
+      font-size: 24px;
       color: #00bcd4;
       margin: 0;
       font-weight: 500;
-      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
+      letter-spacing: 1px;
     }
 
     header p {
-      font-size: 13px; /* Coincide con el index.html */
+      font-size: 13px;
       color: #b3b3b3;
       margin: 10px 0 0;
       font-weight: 300;
-      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
+      letter-spacing: 1px;
     }
 
     .project-details {
@@ -52,19 +52,19 @@
     }
 
     .project-details h2 {
-      font-size: 22px; /* Cambiado a 22px para coincidir con el index.html */
+      font-size: 22px;
       color: #00bcd4;
       margin-top: 0;
       font-weight: 500;
-      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
+      letter-spacing: 1px;
     }
 
     .project-details p {
-      font-size: 13px; /* Coincide con el index.html */
+      font-size: 13px;
       line-height: 1.6;
       color: #b3b3b3;
       margin-bottom: 20px;
-      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
+      letter-spacing: 1px;
     }
 
     .project-details ul {
@@ -75,9 +75,9 @@
 
     .project-details ul li {
       margin-bottom: 10px;
-      font-size: 13px; /* Coincide con el index.html */
+      font-size: 13px;
       color: #b3b3b3;
-      letter-spacing: 1px; /* Añadido para coincidir con el index.html */
+      letter-spacing: 1px;
     }
 
     /* Botones */
@@ -87,12 +87,12 @@
       color: #fff;
       letter-spacing: 1px;
       width: 100%;
-      max-width: 320px; /* Coincide con el index.html */
+      max-width: 320px;
       height: 36px;
       line-height: 36px;
       text-align: center;
       border-radius: 18px;
-      font-size: 13px; /* Coincide con el index.html */
+      font-size: 13px;
       font-weight: 500;
       text-transform: none;
       border: none;
@@ -177,7 +177,7 @@
     }
 
     .metrics p {
-      font-size: 13px; /* Coincide con el index.html */
+      font-size: 13px;
       color: #b3b3b3;
       margin: 5px 0;
     }
@@ -229,11 +229,11 @@
       top: 0;
       width: 100%;
       height: 100%;
-      overflow: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
+      overflow: auto;
       background-color: rgba(0, 0, 0, 0.5);
       justify-content: center;
-      align-items: flex-start; /* Alinea el modal en la parte superior */
-      padding-top: 8px; /* Margen superior */
+      align-items: flex-start;
+      padding-top: 8px;
     }
 
     .modal-content {
@@ -242,12 +242,12 @@
       padding: 20px;
       border-radius: 12px;
       width: 90%; /* Ancho del 90% del contenedor padre */
-      max-width: 600px; /* Ancho máximo más angosto */
+      max-width: 400px; /* Ancho máximo más angosto */
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       position: relative;
       color: #ffffff;
-      max-height: 90vh; /* Limita la altura del modal al 90% de la altura de la ventana */
-      overflow-y: auto; /* Permite el desplazamiento vertical si el contenido es demasiado grande */
+      max-height: 90vh;
+      overflow-y: auto;
     }
 
     .close {
@@ -266,21 +266,21 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       h1 {
-        font-size: 24px; /* Coincide con el index.html */
+        font-size: 24px;
       }
 
       header p {
-        font-size: 13px; /* Coincide con el index.html */
+        font-size: 13px;
         margin-top: 10%;
       }
 
       .project-details h2 {
-        font-size: 22px; /* Coincide con el index.html */
+        font-size: 22px;
         margin-top: -3%;
       }
 
       .project-details p {
-        font-size: 13px; /* Coincide con el index.html */
+        font-size: 13px;
       }
 
       .hyperspeed-container {
